<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pomodoro Technique</string>

    <string name="hint_must_input">Not empty!</string>
    <string name="hint_select_date">Select date</string>

    <string name="lbl_need_input">Please input required information.</string>
    <string name="lbl_task_title">Name:</string>
    <string name="lbl_task_content">Details:</string>
    <string name="lbl_task_todo">Todo:</string>
    <string name="lbl_clock">%1$02d:%2$02d:%3$02d</string>
    <string name="lbl_date">%2$02d-%3$02d-%1$04d</string>
    <string name="lbl_task">Task</string>
    <string name="lbl_break">Break</string>
    <string name="lbl_done">Done!</string>
    <string name="lbl_task_on_running">Task is running now, please stop it first!</string>

    <string name="lbl_current_settings">
        &lt;b>&lt;i>&lt;u> Settings: &lt;/u>&lt;/i>&lt;/b> &lt;br>
        Pomodori: %1$d  &lt;br>
        Timer: %2$d minutes &lt;br>
        Short Break: %3$d minutes &lt;br>
        Longer Break: %4$d minutes
    </string>

    <string name="action_list_task">Todo List</string>
    <string name="action_add_task">Add Task</string>
    <string name="action_today">Today</string>
    <string name="action_settings">Settings</string>
    <string name="action_logs">Logs</string>
    <string name="action_help">Help</string>
    <string name="action_about">About Me</string>

    <string name="dlg_exit_message">Are you sure to quit?</string>
    <string name="dlg_error_title">Error!</string>

    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_start">Start</string>
    <string name="btn_stop">Stop</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>


    <string name="sp_title_settings_tasks">Tasks Queue Size</string>
    <integer name="sp_default_settings_tasks">1</integer>
    <integer-array name="sp_itemValues_settings_tasks">
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </integer-array>
    <string-array name="sp_itemTexts_settings_tasks">
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>


    <string name="sp_title_settings_timer">Timer</string>
    <integer name="sp_default_settings_timer">1</integer>
    <integer-array name="sp_itemValues_settings_timer">
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
    </integer-array>
    <string-array name="sp_itemTexts_settings_timer">
        <item>20 minutes</item>
        <item>25 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>One Hour</item>
    </string-array>


    <string name="sp_title_settings_short_break">Short Break</string>
    <integer name="sp_default_settings_short_break">1</integer>
    <integer-array name="sp_itemValues_settings_short_break">
        <item>2</item>
        <item>3</item>
        <item>5</item>
        <item>10</item>
    </integer-array>
    <string-array name="sp_itemTexts_settings_short_break">
        <item>2 minutes</item>
        <item>3 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
    </string-array>


    <string name="sp_title_settings_longer_break">Longer Break</string>
    <integer name="sp_default_settings_longer_break">1</integer>
    <integer-array name="sp_itemValues_settings_longer_break">
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
        <item>45</item>
    </integer-array>
    <string-array name="sp_itemTexts_settings_longer_break">
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
    </string-array>

    <string name="help_title">Help Center</string>
    <string name="help_body">More fetures in http://www.0-dong.com). \n\n
The stages of planning, tracking, recording, processing and visualizing are fundamental to the technique. In the planning phase tasks are prioritized by recording them in a "To Do Today" list. This enables users to estimate the effort tasks require. As pomodori are completed, they are recorded, adding to a sense of accomplishment and providing raw data for subsequent self-observation and improvement.\n\n

For the purposes of the technique, "pomodoro" refers to the interval of time spent working.[1] After task completion, any time remaining in the pomodoro is devoted to overlearning. Regular breaks are taken, aiding assimilation. A short (3–5 minute) rest separates consecutive pomodori. Four pomodori form a set. A longer (15–30 minute) rest is taken between sets.\n\n

An essential aim of the technique is to reduce the impact of internal and external interruptions on focus and flow. A pomodoro is indivisible. When interrupted during a pomodoro either the other activity must be recorded and postponed (inform – negotiate – schedule – call back) or the pomodoro must be abandoned.
    </string>
    <string name="about_title">About Me</string>
    <string name="about_body">This software open source(https://github.com/chonglou/androids/tree/master/Pomodoro). \nIf you have any question, please email me: itpkg8@gmail.com </string>

</resources>
