<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <TextView
            android:text="@string/lbl_task_title"
            android:labelFor="@+id/tv_task_add_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

    <EditText
            android:id="@id/tv_task_add_title"
            android:hint="@string/hint_must_input"
            android:inputType="text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:text="@string/lbl_task_todo"
            android:labelFor="@+id/tv_task_add_todo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

    <EditText
            android:id="@id/tv_task_add_todo"
            android:hint="@string/hint_select_date"
            android:focusable="false"
            android:clickable="true"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:text="@string/lbl_task_content"
            android:labelFor="@+id/tv_task_add_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

    <EditText
            android:id="@id/tv_task_add_content"
            android:minLines="4"
            android:maxLines="6"
            android:inputType="textMultiLine"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>


    <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <Button
                android:id="@+id/btn_task_add_cancel"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/btn_task_add_save"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>